--- a/react-portfolio/src/components/About/About.module.css
+++ b/react-portfolio/src/components/About/About.module.css
@@ -1,25 +1,31 @@
-@import "src/vars.css";
+@import "../../vars.css";
 
 .container 
 {
     position: relative;
 
 
-    justify-content: space-between;
-    margin-top: 49px;
+
+    margin-top: 350px;
     z-index: 1;
     margin-left: 3%;
     margin-right: 3%;
 
     background-color: var(--color-darker);
     border-radius: 10px;
-    padding: 30px 30px;
+    padding: 50px;
+
+    
     
 }
 
 .title
 {
     color: var(--color-text);
+    font-size: 3vw;
+    font-weight: 650;
+    letter-spacing: 2px;
+    text-transform: uppercase;
     
 }
 
@@ -30,6 +36,7 @@
     align-items: center;
     color: var(--color-text);
     z-index: 1;
+    width: 100%;
 }
 
 .aboutImg
@@ -38,37 +45,125 @@
     z-index: 1;
 }
 
-li
+.aboutImg1
 {
-    margin-top: 5%;
-    margin-bottom: 5%;
+    width: 30%;
+    margin: 3%;
+
+}
+
+    /*
+.aboutLi
+{
+    
     list-style-type: none;
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 15px;
+    padding: 10px;
+    background-image: var(--color-lightGradient);
+    border-radius: 15px;
+    margin: 10px;
+    z-index:1;
+   
+
+}
+
+.aboutLi::before
+{
+    transition: background 2s;
+    background: var(--color-lightGradientOFF);
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 0.5s linear;
+   
+}
+
+.aboutLi:hover::before
+{
+    opacity: 1;
+}
+
+
+
+.aboutLi {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+    padding: 10px;
+    margin: 15px;
+    border-radius: 15px;
+
+
+
+    position: relative;
+    background-image: var(--color-lightGradient);
+    z-index: 1;
+
+    flex-grow: 1;
+  }
+  
+  .aboutLi::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: var(--color-lightGradientOFF1);
+    z-index: -1;
+    transition: opacity 0.5s linear;
+    opacity: 0;
+  }
+  
+  .aboutLi:hover::before {
+    opacity: 1;
+  }
+
+  */
+
+  .aboutLi
+{
     
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+    padding: 25px;
+    background-image: var(--color-lightGradient);
+    border-radius: 15px;
+    margin: 3vw;
+    z-index:1;
+    background-size: 0 100%;
+    background-repeat: no-repeat;
+    transition: background 0.8s;
+   
+
 }
 
-li:hover
+.aboutLi:hover
 {
-    background-color: white;
+    background-size: 100% 100%;
 }
 
-.roles
+
+.aboutLi h3
 {
-    margin-top: 3%;
-    margin-left: 3%;
-    margin-right: 3%;
+    font-size: 2.5vw;
+    font-weight: 600;
+    line-height: 30px;
 }
 
-.desc
+.aboutLi p 
 {
-    margin-left: 3%;
-    margin-right: 3%;
-    margin-top: 1%;
-    
-
+    margin-top: 5%;
+    font-size: 2vw
 }
+
 
 @media screen and (max-width: 830px)
 {
@@ -82,4 +177,7 @@ li:hover
     {
         display: none;
     }
+
+
+
 }
