--- a/react-portfolio/src/App.module.css
+++ b/react-portfolio/src/App.module.css
@@ -4,7 +4,31 @@
 {
     background-color: var(--color-bg);
     width: 100%;
-    
+    height: 100%;
+    overflow: hidden;
+    backdrop-filter: blur(100px);
+  
+}
 
+.particles
+{
+    display: none;
+}
 
+.particlesDiv
+{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    z-index: 0;
+    filter: blur(1px);
+
+}
+
+.content1
+{
+    z-index: 1;
+    position: relative;
 }
