--- a/react-portfolio/src/components/Experience/Experience.module.css
+++ b/react-portfolio/src/components/Experience/Experience.module.css
@@ -6,6 +6,7 @@
     margin-top: 80px;
     margin-left: 10%;
     margin-right: 10%;
+    z-index: 1;
 }
 
 .title
@@ -55,7 +56,7 @@
 
 .skillImageContainer:hover
 {
-    box-shadow: 0px 0px 30px var(--color-secondary);
+    box-shadow: 0px 0px 30px var(--color-plain);
 }
 
 .sik
