--- a/react-portfolio/src/components/Hero/Hero.module.css
+++ b/react-portfolio/src/components/Hero/Hero.module.css
@@ -1,4 +1,4 @@
-@import "src/vars.css";
+@import "../../vars.css";
 
 .container 
 {
@@ -11,6 +11,7 @@
     margin-left: 10%;
     margin-right: 10%;
 }
+
 
 .content 
 {
