--- a/react-portfolio/src/vars.css
+++ b/react-portfolio/src/vars.css
@@ -1,17 +1,20 @@
 :root
 {
     /* Colors */
-    --color-text: #fff;
+    --color-text: #ffffff;
     --color-primary: #576cbc;
     --color-secondary: #19376d;
     --color-dark: #0b2447;
     --color-darker: #07101d;
     --color-bg: #04152d;
+    --color-bg-dim: #04152db4;
     --color-lightGradient: linear-gradient(90deg, rgba(165, 215, 235, 0.45) 0%, rgba(255, 255, 255, 0) 100%);
     --color-lightGradientOFF: rgba(165, 215, 235, 0.45);
     --color-lightGradientOFF1: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(165, 215, 235, 0.45) 100%);
     --color-blueGradient: linear-gradient(90deg, var(--color-secondary) 0%, rgba(25, 55, 110, 0) 100%);
+    --color-blueGradientDown: linear-gradient(180deg, var(--color-secondary) 0%, rgba(25, 55, 110, 0) 100%);
     --color-plain: rgba(255, 255, 255, 1);
+    --color-hotPink: #db2ec4;
 
     --color-topBlur: rgba(25, 55, 110, 0.7);
 
