--- a/react-portfolio/src/App.module.css
+++ b/react-portfolio/src/App.module.css
@@ -6,13 +6,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    backdrop-filter: blur(1px);
-  
-}
-
-.particles
-{
-    display: none;
+    
 }
 
 .particlesDiv
@@ -23,7 +17,8 @@
     height: 100%;
     left: 0;
     z-index: 0;
-    filter: blur(1px);
+
+    
  
 
 }
@@ -32,4 +27,13 @@
 {
     z-index: 1;
     position: relative;
+}
+
+.sticky1
+{
+    top: 0;
+    right: 0;
+    position: fixed;
+    color: #ffffff;
+    z-index: 5;
 }
