--- a/react-portfolio/src/components/About/About.module.css
+++ b/react-portfolio/src/components/About/About.module.css
@@ -4,8 +4,6 @@
 {
     position: relative;
 
-
-
     margin-top: 350px;
     z-index: 1;
     margin-left: 9%;
@@ -42,14 +40,17 @@
 
 .aboutImg
 {
-    width: 40%;
-    z-index: 1;
+    width: 150px;
+    z-index: 0;
+    margin-left: 50px;
+   
+
 }
 
 .aboutImg1
 {
-    width: 20%;
-    margin: 3%;
+    width: 60px;
+    margin: 20px;
 
 }
 
@@ -128,7 +129,6 @@
 
   .aboutLi
 {
-    
     list-style-type: none;
     display: flex;
     flex-direction: row;
