--- a/react-portfolio/src/components/Experience/Experience.module.css
+++ b/react-portfolio/src/components/Experience/Experience.module.css
@@ -11,10 +11,12 @@
 
 .title
 {
+    margin-top: 150px;
     font-size: 35px;
     font-weight: 700;
     letter-spacing: 1.75px;
     text-transform: uppercase;
+    margin-bottom: 50px;
 }
 
 .content
@@ -43,7 +45,7 @@
 
 .skillImageContainer
 {
-    background-color: var(--color-secondary);
+    
     border-radius: 100%;
     display: flex;
     align-items: center;
@@ -52,11 +54,14 @@
     height: 120px;
     box-shadow: 0px 0px 10px var(--color-secondary);
     transition: box-shadow 1s;
+    background-color: var(--color-bg-dim);
+    
 }
 
 .skillImageContainer:hover
 {
     box-shadow: 0px 0px 30px var(--color-plain);
+    
 }
 
 .sik
