--- a/react-portfolio/src/components/Navbar/Navbar.module.css
+++ b/react-portfolio/src/components/Navbar/Navbar.module.css
@@ -6,11 +6,26 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 61px;
     z-index: 2;
-    margin: 0 5%;
+    margin: 0;
+
+    padding: 20px;
+    padding-top: 25px;
+    padding-bottom: 50px;
+
 }
 
+ 
+ .navbar::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+ 
+    background: var(--color-bg-dim);
+    mask: linear-gradient(to top, transparent, black 35%);
+    backdrop-filter: blur(2px);
+ }
 
 .title 
 {
@@ -23,6 +38,7 @@
     cursor: help;
 
     vertical-align: middle;
+    margin-left: 75px;
 
 
 }
@@ -32,6 +48,7 @@
 .menu
 {
     display: flex;
+ 
 }
 
 .menuBtn
@@ -44,9 +61,10 @@
     display: flex;
     gap: 30px;
     list-style: none;
+    margin-right: 75px;
 }
 
-.menuItems a
+.menuItem
 {
     font-size: 25px;
     color: var(--color-text);
@@ -57,11 +75,38 @@
     
 }
 
-.menuItems a:hover
+.menuItem:hover
 {
     background-color: var(--color-bg-dim);
     border-radius: 10px;
     box-shadow: 0px 0px 8px var(--color-plain);
+}
+
+.fisbuk 
+{
+    font-size: 25px;
+    color: var(--color-text);
+    text-decoration: none;
+    background-color: none;
+    padding: 15px;
+    transition-duration: .5s;
+    
+    background: linear-gradient(90deg, 
+              var(--color-plain) 0%, 
+              var(--color-hotPink) 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-size: 200% 200%;
+    font-family: var(--font-outfit);
+    font-weight: bold;
+    
+}
+
+.fisbuk:hover
+{
+    background-color: var(--color-bg-dim);
+    border-radius: 10px;
+    box-shadow: 0px 0px 8px var(--color-hotPink);
 }
 
 @media screen and (max-width: 830px)
