--- a/react-portfolio/src/App.module.css
+++ b/react-portfolio/src/App.module.css
@@ -6,6 +6,9 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    transition-duration: 10s;
+    
+
     
 }
 
@@ -18,8 +21,6 @@
     left: 0;
     z-index: 0;
 
-    
- 
 
 }
 
@@ -27,6 +28,8 @@
 {
     z-index: 1;
     position: relative;
+    
+
 }
 
 .sticky1
@@ -36,4 +39,35 @@
     position: fixed;
     color: #ffffff;
     z-index: 5;
+}
+
+.spinner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    animation-name: slideDown;
+    animation-duration: 3s;
+    animation-delay: 2s;
+    z-index: 10;
+}
+
+
+@keyframes slideDown {
+    from {
+        transform: translateY(0);
+    }
+    to {
+        transform: translateY(500px);
+    }
+}
+
+@keyframes contentA {
+    from {
+        display: none;
+    }
+    to {
+        display:flex;
+    }
 }
