--- a/react-portfolio/src/components/About/About.module.css
+++ b/react-portfolio/src/components/About/About.module.css
@@ -179,6 +179,13 @@
         display: none;
     }
 
+    .aboutImg1
+    {
+        width: 40px;
+        margin: 10px;
+
+    }
+
     .aboutLi h3
     {
         font-size: 25px;
